# bit-test-task

./: .gitignore  README.md  pyproject.toml  sample.env
app/: callbacks.py  decorators.py  main.py  queries.py  reports.py  utils.py
app/menu/: handler.py  menu.py  option.py  utils.py
app/validators/: models.py
database/: create_tables.py  database_init.py  fixtures.py
